# Battleship-Part2

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp  player.cpp
documentation/: accounting.txt  estimate.txt  team31-project2-hours.md
src/: ai.cpp  ai.hpp  board.cpp  board.hpp  gameloop.cpp  gameloop.hpp  main.cpp  player.cpp  player.hpp  setup.cpp  setup.hpp  ships.cpp  ships.hpp
tests/: testship.cpp
